--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,7 @@
-URL=https://www.euronews.com/
+URL=https://www.s.com/
 maxDepth=8
 maxQuantityPage=20
 words=Coronavirus,COVID-19,Trump,Lukashenko,Belarus
 limitSort=10
+allStatisticFileName=allStatistic
+sortStatisticFileName=sortStatistic
