--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-URL=https://www.euronews.com/
+URL=https://www.s.com/
 maxDepth=8
 maxQuantityPage=20
 words=Coronavirus,COVID-19,Trump,Lukashenko,Belarus
