--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
-URL=https://www.s.com/
-maxDepth=8
-maxQuantityPage=20
-words=Coronavirus,COVID-19,Trump,Lukashenko,Belarus
-limitSort=10
-allStatisticFileName=allStatistic
-sortStatisticFileName=sortStatistic
+URL=${url}
+maxDepth=${maxDepth}
+maxQuantityPage=${maxQuantityPage}
+words=${words}
+limitSort=${limitSort}
+allStatisticFileName=${allStatistic}
+sortStatisticFileName=${sortStatistic}
